@@ -19,18 +19,15 @@ import org.apache.commons.lang3.StringUtils;
 import org.joda.time.DateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
 
 import java.io.IOException;
-import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
 
 @Service
 @SuppressWarnings("unchecked")
@@ -38,29 +35,32 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
 
     private final Logger logger = LoggerFactory.getLogger(AssessmentServiceV2Impl.class);
 
-    @Autowired
     AssessmentUtilServiceV2 assessUtilServ;
 
-    @Autowired
     CbExtAssessmentServerProperties serverProperties;
 
-    @Autowired
     Producer kafkaProducer;
 
-    @Autowired
     AssessmentRepository assessmentRepository;
 
-    @Autowired
     RedisCacheMgr redisCacheMgr;
 
-    @Autowired
     OutboundRequestHandlerServiceImpl outboundRequestHandlerService;
 
-    @Autowired
     ObjectMapper mapper;
 
-    @Autowired
     AccessTokenValidator accessTokenValidator;
+
+    public AssessmentServiceV2Impl(AssessmentUtilServiceV2 assessUtilServ, CbExtAssessmentServerProperties serverProperties, Producer kafkaProducer, AssessmentRepository assessmentRepository, RedisCacheMgr redisCacheMgr, OutboundRequestHandlerServiceImpl outboundRequestHandlerService, ObjectMapper mapper, AccessTokenValidator accessTokenValidator) {
+        this.assessUtilServ = assessUtilServ;
+        this.serverProperties = serverProperties;
+        this.kafkaProducer = kafkaProducer;
+        this.assessmentRepository = assessmentRepository;
+        this.redisCacheMgr = redisCacheMgr;
+        this.outboundRequestHandlerService = outboundRequestHandlerService;
+        this.mapper = mapper;
+        this.accessTokenValidator = accessTokenValidator;
+    }
 
     public SBApiResponse readAssessment(String assessmentIdentifier, String token) {
         logger.info("AssessmentServiceV2Impl::readAssessment... Started");
@@ -68,71 +68,16 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
         String errMsg;
         try {
             String userId = validateAuthTokenAndFetchUserId(token);
-            if (userId != null) {
-                logger.info("readAssessment.. userId :" + userId);
+            if (userId == null) {
+                errMsg = Constants.USER_ID_DOESNT_EXIST;
+            } else {
+                logger.info("readAssessment.. userId :{}", userId);
                 Map<String, Object> assessmentAllDetail = new HashMap<>();
                 errMsg = fetchReadHierarchyDetails(assessmentAllDetail, token, assessmentIdentifier);
-                if (errMsg.isEmpty() && !((String) assessmentAllDetail.get(Constants.PRIMARY_CATEGORY)).equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET)) {
-                    logger.info("Fetched assessment Details... for : " + assessmentIdentifier);
-                    List<Map<String, Object>> existingDataList = assessmentRepository.fetchUserAssessmentDataFromDB(userId, assessmentIdentifier);
-                    Instant assessmentStartTime = Instant.now();
-                    if (existingDataList.isEmpty()) {
-                        int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
-                        Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration,
-                                assessmentStartTime, 0);
-                        logger.info("Assessment read first time for user.");
-                        Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
-                        assessmentData.put(Constants.START_TIME, assessmentStartTime);
-                        assessmentData.put(Constants.END_TIME, assessmentEndTime);
-                        response.getResult().put(Constants.QUESTION_SET, assessmentData);
-                        redisCacheMgr.putCache(Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token, response.getResult().get(Constants.QUESTION_SET));
-                        Boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier, assessmentStartTime, assessmentEndTime, (Map<String, Object>) (response.getResult().get(Constants.QUESTION_SET)), Constants.NOT_SUBMITTED);
-                        if (Boolean.FALSE.equals(isAssessmentUpdatedToDB)) {
-                            errMsg = Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
-                        }
-                    } else {
-                        logger.info("Assessment read... user has details... ");
-                        Object endTimeObj = existingDataList.get(0).get(Constants.END_TIME);
-                        Date existingAssessmentEndTime = endTimeObj instanceof Instant
-                                ? Date.from((Instant) endTimeObj)
-                                : (Date) endTimeObj;
-                        if (assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0 && ((String) existingDataList.get(0).get(Constants.STATUS)).equalsIgnoreCase(Constants.NOT_SUBMITTED)) {
-                            Map<String, Object> questionSetFromAssessment;
-                            String userQuestionSet = redisCacheMgr.getCache(Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token);
-                            if (!ObjectUtils.isEmpty(userQuestionSet)) {
-                                questionSetFromAssessment = mapper.readValue(userQuestionSet, new TypeReference<Map<String, Object>>() {
-                                });
-                            } else {
-                                String questionSetFromAssessmentString = (String) existingDataList.get(0).get(Constants.ASSESSMENT_READ_RESPONSE);
-                                questionSetFromAssessment = new Gson().fromJson(questionSetFromAssessmentString, new TypeToken<HashMap<String, Object>>() {
-                                }.getType());
-                                questionSetFromAssessment.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
-                                questionSetFromAssessment.put(Constants.END_TIME, existingAssessmentEndTime);
-                                response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
-                                redisCacheMgr.putCache(Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token, questionSetFromAssessment);
-                            }
-                            response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
-                        } else if ((assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0 && ((String) existingDataList.get(0).get(Constants.STATUS)).equalsIgnoreCase(Constants.SUBMITTED)) || assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) > 0) {
-                            logger.info("Incase the assessment is submitted before the end time, or the endtime has exceeded, read assessment freshly ");
-                            Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
-                            int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
-                            Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
-                            assessmentData.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
-                            assessmentData.put(Constants.END_TIME, assessmentEndTime);
-                            response.getResult().put(Constants.QUESTION_SET, assessmentData);
-                            Boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier, assessmentStartTime, calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0), (Map<String, Object>) (response.getResult().get(Constants.QUESTION_SET)), Constants.NOT_SUBMITTED);
-                            redisCacheMgr.putCache(Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token, response.getResult().get(Constants.QUESTION_SET));
-                            if (Boolean.FALSE.equals(isAssessmentUpdatedToDB)) {
-                                errMsg = Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
-                            }
-                        }
-                    }
-                } else if (errMsg.isEmpty() && ((String) assessmentAllDetail.get(Constants.PRIMARY_CATEGORY)).equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET)) {
-                    response.getResult().put(Constants.QUESTION_SET, readAssessmentLevelData(assessmentAllDetail));
-                    redisCacheMgr.putCache(Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token, response.getResult().get(Constants.QUESTION_SET));
+                if (errMsg.isEmpty()) {
+                    errMsg = populateAssessmentQuestionSet(response, assessmentAllDetail, assessmentIdentifier, token,
+                            userId);
                 }
-            } else {
-                errMsg = Constants.USER_ID_DOESNT_EXIST;
             }
         } catch (Exception e) {
             logger.error(String.format("Exception in %s : %s", "read Assessment", e.getMessage()), e);
@@ -146,10 +91,130 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
         return response;
     }
 
+    private String userAssessmentCacheKey(String assessmentIdentifier, String token) {
+        return Constants.USER_ASSESS_REQ + assessmentIdentifier + "_" + token;
+    }
+
+    /**
+     * Puts the question set for this user onto the response, and returns the error message
+     * ({@link StringUtils#EMPTY} when there is none).
+     */
+    private String populateAssessmentQuestionSet(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                                 String assessmentIdentifier, String token, String userId)
+            throws IOException {
+        String primaryCategory = (String) assessmentAllDetail.get(Constants.PRIMARY_CATEGORY);
+        if (primaryCategory.equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET)) {
+            response.getResult().put(Constants.QUESTION_SET, readAssessmentLevelData(assessmentAllDetail));
+            redisCacheMgr.putCache(userAssessmentCacheKey(assessmentIdentifier, token),
+                    response.getResult().get(Constants.QUESTION_SET));
+            return StringUtils.EMPTY;
+        }
+
+        logger.info("Fetched assessment Details... for : {}", assessmentIdentifier);
+        List<Map<String, Object>> existingDataList = assessmentRepository.fetchUserAssessmentDataFromDB(userId,
+                assessmentIdentifier);
+        Instant assessmentStartTime = Instant.now();
+        if (existingDataList.isEmpty()) {
+            return startNewAssessment(response, assessmentAllDetail, assessmentIdentifier, token, userId,
+                    assessmentStartTime);
+        }
+        return resumeOrRestartAssessment(response, assessmentAllDetail, assessmentIdentifier, token, userId,
+                assessmentStartTime, existingDataList);
+    }
+
+    /** First attempt for this user — build the question set and record the start/end window. */
+    private String startNewAssessment(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                      String assessmentIdentifier, String token, String userId,
+                                      Instant assessmentStartTime) {
+        logger.info("Assessment read first time for user.");
+        int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
+        Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
+        Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
+        assessmentData.put(Constants.START_TIME, assessmentStartTime);
+        assessmentData.put(Constants.END_TIME, assessmentEndTime);
+        response.getResult().put(Constants.QUESTION_SET, assessmentData);
+        redisCacheMgr.putCache(userAssessmentCacheKey(assessmentIdentifier, token),
+                response.getResult().get(Constants.QUESTION_SET));
+        boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier,
+                assessmentStartTime, assessmentEndTime,
+                (Map<String, Object>) response.getResult().get(Constants.QUESTION_SET), Constants.NOT_SUBMITTED);
+        return isAssessmentUpdatedToDB ? StringUtils.EMPTY : Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
+    }
+
+    /**
+     * The user already has a record: hand back the in-progress attempt if the window is still open,
+     * otherwise start a fresh one.
+     */
+    private String resumeOrRestartAssessment(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                             String assessmentIdentifier, String token, String userId,
+                                             Instant assessmentStartTime,
+                                             List<Map<String, Object>> existingDataList) throws IOException {
+        logger.info("Assessment read... user has details... ");
+        Map<String, Object> existingData = existingDataList.get(0);
+        Object endTimeObj = existingData.get(Constants.END_TIME);
+        Date existingAssessmentEndTime = endTimeObj instanceof Instant instant
+                ? Date.from(instant)
+                : (Date) endTimeObj;
+        boolean withinAssessmentWindow = assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0;
+        String status = (String) existingData.get(Constants.STATUS);
+
+        if (withinAssessmentWindow && status.equalsIgnoreCase(Constants.NOT_SUBMITTED)) {
+            resumeAssessment(response, assessmentIdentifier, token, existingData, assessmentStartTime,
+                    existingAssessmentEndTime);
+            return StringUtils.EMPTY;
+        }
+        if ((withinAssessmentWindow && status.equalsIgnoreCase(Constants.SUBMITTED))
+                || assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) > 0) {
+            return restartAssessment(response, assessmentAllDetail, assessmentIdentifier, token, userId,
+                    assessmentStartTime);
+        }
+        return StringUtils.EMPTY;
+    }
+
+    /** Attempt still open — serve it from cache, falling back to the copy stored on the DB record. */
+    private void resumeAssessment(SBApiResponse response, String assessmentIdentifier, String token,
+                                  Map<String, Object> existingData, Instant assessmentStartTime,
+                                  Date existingAssessmentEndTime) throws IOException {
+        Map<String, Object> questionSetFromAssessment;
+        String userQuestionSet = redisCacheMgr.getCache(userAssessmentCacheKey(assessmentIdentifier, token));
+        if (!ObjectUtils.isEmpty(userQuestionSet)) {
+            questionSetFromAssessment = mapper.readValue(userQuestionSet, new TypeReference<Map<String, Object>>() {
+            });
+        } else {
+            String questionSetFromAssessmentString = (String) existingData.get(Constants.ASSESSMENT_READ_RESPONSE);
+            questionSetFromAssessment = new Gson().fromJson(questionSetFromAssessmentString,
+                    new TypeToken<HashMap<String, Object>>() {
+                    }.getType());
+            questionSetFromAssessment.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
+            questionSetFromAssessment.put(Constants.END_TIME, existingAssessmentEndTime);
+            response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
+            redisCacheMgr.putCache(userAssessmentCacheKey(assessmentIdentifier, token), questionSetFromAssessment);
+        }
+        response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
+    }
+
+    /** Previous attempt was submitted, or its window has expired — read the assessment freshly. */
+    private String restartAssessment(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                     String assessmentIdentifier, String token, String userId,
+                                     Instant assessmentStartTime) {
+        logger.info("Incase the assessment is submitted before the end time, or the endtime has exceeded, read assessment freshly ");
+        Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
+        int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
+        Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
+        assessmentData.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
+        assessmentData.put(Constants.END_TIME, assessmentEndTime);
+        response.getResult().put(Constants.QUESTION_SET, assessmentData);
+        boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier,
+                assessmentStartTime, calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0),
+                (Map<String, Object>) response.getResult().get(Constants.QUESTION_SET), Constants.NOT_SUBMITTED);
+        redisCacheMgr.putCache(userAssessmentCacheKey(assessmentIdentifier, token),
+                response.getResult().get(Constants.QUESTION_SET));
+        return isAssessmentUpdatedToDB ? StringUtils.EMPTY : Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
+    }
+
     public SBApiResponse readQuestionList(Map<String, Object> requestBody, String authUserToken) {
         SBApiResponse response = createDefaultResponse(Constants.API_SUBMIT_ASSESSMENT);
         String errMsg;
-        String primaryCategory = "";
         Map<String, String> result = new HashMap<>();
         try {
             List<String> identifierList = new ArrayList<>();
@@ -215,15 +280,15 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
                 }));
             } else {
                 Map<String, Object> readHierarchyApiResponse = assessUtilServ.getReadHierarchyApiResponse(assessmentIdentifier, token);
-                if (!readHierarchyApiResponse.isEmpty())
-                    if (ObjectUtils.isEmpty(readHierarchyApiResponse) || !Constants.OK.equalsIgnoreCase((String) readHierarchyApiResponse.get(Constants.RESPONSE_CODE))) {
-                        return Constants.ASSESSMENT_HIERARCHY_READ_FAILED;
-                    }
+                if (!readHierarchyApiResponse.isEmpty()
+                        && (ObjectUtils.isEmpty(readHierarchyApiResponse) || !Constants.OK.equalsIgnoreCase((String) readHierarchyApiResponse.get(Constants.RESPONSE_CODE)))) {
+                    return Constants.ASSESSMENT_HIERARCHY_READ_FAILED;
+                }
                 assessmentAllDetail.putAll((Map<String, Object>) ((Map<String, Object>) readHierarchyApiResponse.get(Constants.RESULT)).get(Constants.QUESTION_SET));
                 redisCacheMgr.putCache(Constants.ASSESSMENT_ID + assessmentIdentifier, ((Map<String, Object>) readHierarchyApiResponse.get(Constants.RESULT)).get(Constants.QUESTION_SET));
             }
         } catch (Exception e) {
-            logger.info("Error while fetching or mapping read hierarchy data" + e.getMessage());
+            logger.info("Error while fetching or mapping read hierarchy data{}", e.getMessage());
             return Constants.ASSESSMENT_HIERARCHY_READ_FAILED;
         }
         return StringUtils.EMPTY;
@@ -313,96 +378,47 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
         if (errMsg.isEmpty()) {
             String userId = validateAuthTokenAndFetchUserId(authUserToken);
             String scoreCutOffType = ((String) assessmentHierarchy.get(Constants.SCORE_CUTOFF_TYPE)).toLowerCase();
-            List<Map<String, Object>> existingDataList = new ArrayList<>();
             List<Map<String, Object>> sectionLevelsResults = new ArrayList<>();
             Map<String, Object> questionSetFromAssessment = new HashMap<>();
+            boolean practiceQuestionSet = ((String) (assessmentHierarchy.get(Constants.PRIMARY_CATEGORY)))
+                    .equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET);
+            String primaryCategory = (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY);
             for (Map<String, Object> hierarchySection : hierarchySectionList) {
-                String hierarchySectionId = (String) hierarchySection.get(Constants.IDENTIFIER);
-                String userSectionId = "";
-                Map<String, Object> userSectionData = new HashMap<>();
-                for (Map<String, Object> sectionFromSubmitRequest : sectionListFromSubmitRequest) {
-                    userSectionId = (String) sectionFromSubmitRequest.get(Constants.IDENTIFIER);
-                    if (userSectionId.equalsIgnoreCase(hierarchySectionId)) {
-                        userSectionData = sectionFromSubmitRequest;
-                        break;
-                    }
+                UserSection userSection = findUserSection(sectionListFromSubmitRequest,
+                        (String) hierarchySection.get(Constants.IDENTIFIER));
+                SectionQuestions sectionQuestions = resolveSectionQuestions(practiceQuestionSet, submitRequest,
+                        authUserToken, userId, questionSetFromAssessment, questionsListFromAssessmentHierarchy,
+                        userSection);
+                if (sectionQuestions == null) {
+                    errMsg = "Question Set From The Database returns Null";
+                    outgoingResponse.getResult().clear();
+                    break;
                 }
-                if (!((String) (assessmentHierarchy.get(Constants.PRIMARY_CATEGORY))).equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET)) {
-                    String assessmentData = redisCacheMgr.getCache(Constants.USER_ASSESS_REQ + submitRequest.get(Constants.IDENTIFIER) + "_" + authUserToken);
-                    if (!ObjectUtils.isEmpty(assessmentData)) {
-                        questionSetFromAssessment.putAll(mapper.readValue(assessmentData, new TypeReference<Map<String, Object>>() {
-                        }));
-                    } else {
-                        existingDataList = assessmentRepository.fetchUserAssessmentDataFromDB(userId, (String) submitRequest.get(Constants.IDENTIFIER));
-                        String questionSetFromAssessmentString = (!existingDataList.isEmpty()) ? (String) existingDataList.get(0).get(Constants.ASSESSMENT_READ_RESPONSE_KEY) : "";
-                        if (!questionSetFromAssessmentString.isEmpty()) {
-                            questionSetFromAssessment = new Gson().fromJson(questionSetFromAssessmentString, new TypeToken<HashMap<String, Object>>() {
-                            }.getType());
-                        }
-                    }
-                    if (questionSetFromAssessment != null && questionSetFromAssessment.get(Constants.CHILDREN) != null) {
-                        List<Map<String, Object>> sections = (List<Map<String, Object>>) questionSetFromAssessment.get(Constants.CHILDREN);
-                        for (Map<String, Object> section : sections) {
-                            String sectionId = (String) section.get(Constants.IDENTIFIER);
-                            if (userSectionId.equalsIgnoreCase(sectionId)) {
-                                questionsListFromAssessmentHierarchy = (List<String>) section.get(Constants.CHILD_NODES);
-                                break;
-                            }
-                        }
-                    } else {
-                        errMsg = "Question Set From The Database returns Null";
-                        outgoingResponse.getResult().clear();
-                        break;
-                    }
+                questionSetFromAssessment = sectionQuestions.questionSet();
+                questionsListFromAssessmentHierarchy = sectionQuestions.questionIds();
+                List<Map<String, Object>> questionsListFromSubmitRequest = sectionQuestions.submittedQuestions();
+                hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
 
-                    hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
-                    List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
-                    if (userSectionData.containsKey(Constants.CHILDREN) && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
-                        questionsListFromSubmitRequest = (List<Map<String, Object>>) userSectionData.get(Constants.CHILDREN);
-                    }
-                    Map<String, Object> result = new HashMap<>();
-                    switch (scoreCutOffType) {
-                        case Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection, assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy, questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,authUserToken))));                            outgoingResponse.getResult().putAll(calculateAssessmentFinalResults(result));
-                            writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, result, (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY));
-                            return outgoingResponse;
+                boolean assessmentLevel = Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType);
+                if (assessmentLevel || Constants.SECTION_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType)) {
+                    Map<String, Object> result = scoreSection(hierarchySection, questionsListFromAssessmentHierarchy,
+                            questionsListFromSubmitRequest, assessmentIdFromRequest, editMode, authUserToken);
+                    if (!assessmentLevel) {
+                        sectionLevelsResults.add(result);
+                    } else {
+                        outgoingResponse.getResult().putAll(calculateAssessmentFinalResults(result));
+                        if (!practiceQuestionSet) {
+                            writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment,
+                                    result, primaryCategory);
                         }
-                        case Constants.SECTION_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection, assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy, questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,authUserToken))));                            sectionLevelsResults.add(result);
-                        }
-                        break;
-                        default:
-                            break;
-                    }
-
-                } else {
-                    hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
-                    List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
-                    if (userSectionData.containsKey(Constants.CHILDREN) && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
-                        questionsListFromSubmitRequest = (List<Map<String, Object>>) userSectionData.get(Constants.CHILDREN);
-                    }
-                    List<String> desiredKeys = List.of(Constants.IDENTIFIER);
-                    List<Object> questionsList = questionsListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
-                    questionsListFromAssessmentHierarchy = questionsList.stream().map(object -> Objects.toString(object, null)).collect(Collectors.toList());
-                    Map<String, Object> result = new HashMap<>();
-                    switch (scoreCutOffType) {
-                        case Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection, assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy, questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,authUserToken))));                            outgoingResponse.getResult().putAll(calculateAssessmentFinalResults(result));
-                            return outgoingResponse;
-                        }
-                        case Constants.SECTION_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection, assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy, questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,authUserToken))));                            sectionLevelsResults.add(result);
-                        }
-                        break;
-                        default:
-                            break;
+                        return outgoingResponse;
                     }
                 }
             }
-            if (errMsg.isEmpty() && !ObjectUtils.isEmpty(scoreCutOffType) && scoreCutOffType.equalsIgnoreCase(Constants.SECTION_LEVEL_SCORE_CUTOFF)) {
-                Map<String, Object> result = calculateSectionFinalResults(sectionLevelsResults);
-                outgoingResponse.getResult().putAll(result);
-                writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, result, (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY));
+            if (errMsg.isEmpty() && !ObjectUtils.isEmpty(scoreCutOffType)
+                    && scoreCutOffType.equalsIgnoreCase(Constants.SECTION_LEVEL_SCORE_CUTOFF)) {
+                finaliseSectionLevelResults(outgoingResponse, sectionLevelsResults, submitRequest, userId,
+                        questionSetFromAssessment, primaryCategory);
                 return outgoingResponse;
             }
         }
@@ -414,9 +430,138 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
         return outgoingResponse;
     }
 
+    /** Rolls the per-section results into the overall response and persists the submission. */
+    private void finaliseSectionLevelResults(SBApiResponse outgoingResponse,
+                                             List<Map<String, Object>> sectionLevelsResults,
+                                             Map<String, Object> submitRequest, String userId,
+                                             Map<String, Object> questionSetFromAssessment, String primaryCategory) {
+        Map<String, Object> result = calculateSectionFinalResults(sectionLevelsResults);
+        outgoingResponse.getResult().putAll(result);
+        writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, result,
+                primaryCategory);
+    }
+
+    /** The section of the submit request matching a hierarchy section, and the id last examined. */
+    private record UserSection(String id, Map<String, Object> data) {
+    }
+
+    /** The question ids to score a section against, and the questions the user actually submitted. */
+    private record SectionQuestions(Map<String, Object> questionSet, List<String> questionIds,
+                                    List<Map<String, Object>> submittedQuestions) {
+    }
+
+    /**
+     * Works out which questions a section should be scored against. For a practice set the ids come
+     * straight from the submission; otherwise they come from the stored question set. Returns
+     * {@code null} when that stored question set could not be read.
+     */
+    private SectionQuestions resolveSectionQuestions(boolean practiceQuestionSet, Map<String, Object> submitRequest,
+                                                     String authUserToken, String userId,
+                                                     Map<String, Object> questionSetFromAssessment,
+                                                     List<String> currentQuestionIds, UserSection userSection)
+            throws IOException {
+        List<Map<String, Object>> submittedQuestions = childrenOf(userSection.data());
+        if (practiceQuestionSet) {
+            return new SectionQuestions(questionSetFromAssessment, questionIdsFrom(submittedQuestions),
+                    submittedQuestions);
+        }
+        Map<String, Object> questionSet = loadQuestionSetFromAssessment(submitRequest, authUserToken, userId,
+                questionSetFromAssessment);
+        if (questionSet == null || questionSet.get(Constants.CHILDREN) == null) {
+            return null;
+        }
+        List<String> sectionChildNodes = findSectionChildNodes(questionSet, userSection.id());
+        return new SectionQuestions(questionSet,
+                sectionChildNodes != null ? sectionChildNodes : currentQuestionIds, submittedQuestions);
+    }
+
+    private UserSection findUserSection(List<Map<String, Object>> sectionListFromSubmitRequest,
+                                        String hierarchySectionId) {
+        String userSectionId = "";
+        Map<String, Object> userSectionData = new HashMap<>();
+        for (Map<String, Object> sectionFromSubmitRequest : sectionListFromSubmitRequest) {
+            userSectionId = (String) sectionFromSubmitRequest.get(Constants.IDENTIFIER);
+            if (userSectionId.equalsIgnoreCase(hierarchySectionId)) {
+                userSectionData = sectionFromSubmitRequest;
+                break;
+            }
+        }
+        return new UserSection(userSectionId, userSectionData);
+    }
+
+    /** The identifiers of the questions carried by a submitted section. */
+    private List<String> questionIdsFrom(List<Map<String, Object>> questionsListFromSubmitRequest) {
+        List<String> desiredKeys = List.of(Constants.IDENTIFIER);
+        List<Object> questionsList = questionsListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
+        return questionsList.stream().map(object -> Objects.toString(object, null))
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    /** The submitted children for a section, or an empty list when the section carries none. */
+    private List<Map<String, Object>> childrenOf(Map<String, Object> userSectionData) {
+        if (userSectionData.containsKey(Constants.CHILDREN)
+                && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
+            return (List<Map<String, Object>>) userSectionData.get(Constants.CHILDREN);
+        }
+        return new ArrayList<>();
+    }
+
+    /**
+     * The question set for this attempt, preferring the cached copy and falling back to the one
+     * stored against the user's DB record. Returns {@code fallback} when neither is available.
+     */
+    private Map<String, Object> loadQuestionSetFromAssessment(Map<String, Object> submitRequest, String authUserToken,
+                                                              String userId, Map<String, Object> fallback)
+            throws IOException {
+        String assessmentData = redisCacheMgr.getCache(
+                Constants.USER_ASSESS_REQ + submitRequest.get(Constants.IDENTIFIER) + "_" + authUserToken);
+        if (!ObjectUtils.isEmpty(assessmentData)) {
+            fallback.putAll(mapper.readValue(assessmentData, new TypeReference<Map<String, Object>>() {
+            }));
+            return fallback;
+        }
+        List<Map<String, Object>> existingDataList = assessmentRepository.fetchUserAssessmentDataFromDB(userId,
+                (String) submitRequest.get(Constants.IDENTIFIER));
+        String questionSetFromAssessmentString = (!existingDataList.isEmpty())
+                ? (String) existingDataList.get(0).get(Constants.ASSESSMENT_READ_RESPONSE_KEY)
+                : "";
+        if (!questionSetFromAssessmentString.isEmpty()) {
+            return new Gson().fromJson(questionSetFromAssessmentString, new TypeToken<HashMap<String, Object>>() {
+            }.getType());
+        }
+        return fallback;
+    }
+
+    /** Child node ids of the section matching {@code userSectionId}, or null when no section matches. */
+    private List<String> findSectionChildNodes(Map<String, Object> questionSetFromAssessment, String userSectionId) {
+        List<Map<String, Object>> sections = (List<Map<String, Object>>) questionSetFromAssessment
+                .get(Constants.CHILDREN);
+        for (Map<String, Object> section : sections) {
+            if (userSectionId.equalsIgnoreCase((String) section.get(Constants.IDENTIFIER))) {
+                return (List<String>) section.get(Constants.CHILD_NODES);
+            }
+        }
+        return null;
+    }
+
+    /** Scores one section of the submission against the assessment hierarchy. */
+    private Map<String, Object> scoreSection(Map<String, Object> hierarchySection,
+                                             List<String> questionsListFromAssessmentHierarchy,
+                                             List<Map<String, Object>> questionsListFromSubmitRequest,
+                                             String assessmentIdFromRequest, boolean editMode, String authUserToken)
+            throws IOException {
+        Map<String, Object> result = new HashMap<>();
+        result.putAll(createResponseMapWithProperStructure(hierarchySection,
+                assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
+                        questionsListFromSubmitRequest,
+                        assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,
+                                assessmentIdFromRequest, editMode, authUserToken))));
+        return result;
+    }
+
     private void writeDataToDatabaseAndTriggerKafkaEvent(Map<String, Object> submitRequest, String userId, Map<String, Object> questionSetFromAssessment, Map<String, Object> result, String primaryCategory) {
         try {
-            if (questionSetFromAssessment.get(Constants.START_TIME) != null) {
+            if (questionSetFromAssessment != null && questionSetFromAssessment.get(Constants.START_TIME) != null) {
                 Instant startTime = assessUtilServ.parseStartTimeToInstant(questionSetFromAssessment.get(Constants.START_TIME));
                 Boolean isAssessmentUpdatedToDB = assessmentRepository.updateUserAssesmentDataToDB(userId, (String) submitRequest.get(Constants.IDENTIFIER), submitRequest, result, Constants.SUBMITTED, startTime,null);
                 if (Boolean.TRUE.equals(isAssessmentUpdatedToDB)) {
@@ -428,12 +573,12 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
                     kafkaResult.put(Constants.ASSESSMENT_ID_KEY, submitRequest.get(Constants.IDENTIFIER));
                     kafkaResult.put(Constants.PRIMARY_CATEGORY, primaryCategory);
                     kafkaResult.put(Constants.TOTAL_SCORE, result.get(Constants.OVERALL_RESULT));
-                    if ((primaryCategory.equalsIgnoreCase("Competency Assessment")
-                            && submitRequest.containsKey("competencies_v3")
-                            && submitRequest.get("competencies_v3") != null)) {
+                    if (("Competency Assessment".equalsIgnoreCase(primaryCategory)
+                            && submitRequest.containsKey(Constants.COMPETENCIES_V3)
+                            && submitRequest.get(Constants.COMPETENCIES_V3) != null)) {
                         ObjectMapper objectMapper = new ObjectMapper(); //Updated for Json Import
                         List<Map<String, Object>> competencyList = objectMapper.readValue(
-                                (String) submitRequest.get("competencies_v3"),
+                                (String) submitRequest.get(Constants.COMPETENCIES_V3),
                                 new TypeReference<List<Map<String, Object>>>() {
                                 }
                         );
@@ -490,8 +635,8 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
                 int time = submissionTime.compareTo(later);
                 if (time <= 0) {
                     List<String> desiredKeys = List.of(Constants.IDENTIFIER);
-                    List<Object> hierarchySectionIds = hierarchySectionList.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
-                    List<Object> submitSectionIds = sectionListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
+                    List<Object> hierarchySectionIds = hierarchySectionList.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
+                    List<Object> submitSectionIds = sectionListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
                     if (!new HashSet<>(hierarchySectionIds).containsAll(submitSectionIds)) {
                         return Constants.WRONG_SECTION_DETAILS;
                     } else {
@@ -519,7 +664,7 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
             if (questionSetFromAssessment != null && questionSetFromAssessment.get(Constants.CHILDREN) != null) {
                 List<Map<String, Object>> sections = (List<Map<String, Object>>) questionSetFromAssessment.get(Constants.CHILDREN);
                 List<String> desiredKey = List.of(Constants.CHILD_NODES);
-                List<Object> questionList = sections.stream().flatMap(x -> desiredKey.stream().filter(x::containsKey).map(x::get)).collect(toList());
+                List<Object> questionList = sections.stream().flatMap(x -> desiredKey.stream().filter(x::containsKey).map(x::get)).toList();
                 List<Object> questionIdsFromAssessmentHierarchy = new ArrayList<>();
                 List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
                 for (Object question : questionList) {
@@ -530,7 +675,7 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
                         questionsListFromSubmitRequest.addAll((List<Map<String, Object>>) userSectionData.get(Constants.CHILDREN));
                     }
                 }
-                List<Object> userQuestionIdsFromSubmitRequest = questionsListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(Collectors.toList());
+                List<Object> userQuestionIdsFromSubmitRequest = questionsListFromSubmitRequest.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
                 if (!new HashSet<>(questionIdsFromAssessmentHierarchy).containsAll(userQuestionIdsFromSubmitRequest)) {
                     return Constants.ASSESSMENT_SUBMIT_INVALID_QUESTION;
                 }
@@ -640,7 +785,7 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
             List<String> childNodeList = new ArrayList<>();
             if (!ObjectUtils.isEmpty(section.get(Constants.MAX_QUESTIONS))) {
                 int maxQuestions = (int) section.get(Constants.MAX_QUESTIONS);
-                childNodeList = allQuestionIdList.stream().limit(maxQuestions).collect(toList());
+                childNodeList = allQuestionIdList.stream().limit(maxQuestions).collect(Collectors.toCollection(ArrayList::new));
             }
             newSection.put(Constants.CHILD_NODES, childNodeList);
             sectionResponse.add(newSection);
@@ -705,11 +850,11 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
         return response;
     }
 
-    private Boolean validateQuestionListRequest(List<String> identifierList, List<String> questionsFromAssessment) {
-        return (new HashSet<>(questionsFromAssessment).containsAll(identifierList)) ? Boolean.TRUE : Boolean.FALSE;
+    private boolean validateQuestionListRequest(List<String> identifierList, List<String> questionsFromAssessment) {
+        return new HashSet<>(questionsFromAssessment).containsAll(identifierList);
     }
 
-    public SBApiResponse retakeAssessment(String assessmentIdentifier, String token) throws Exception {
+    public SBApiResponse retakeAssessment(String assessmentIdentifier, String token) {
         logger.info("AssessmentServiceV2Impl::retakeAssessment... Started");
         SBApiResponse response = createDefaultResponse(Constants.API_RETAKE_ASSESSMENT_GET);
         String errMsg = "";
@@ -750,7 +895,7 @@ public class AssessmentServiceV2Impl implements AssessmentServiceV2 {
 
     private int calculateAssessmentRetakeCount(List<Map<String, Object>> userAssessmentData) {
         List<String> desiredKeys = List.of(Constants.SUBMIT_ASSESSMENT_RESPONSE);
-        List<Object> values = userAssessmentData.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
+        List<Object> values = userAssessmentData.stream().flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(Collectors.toCollection(ArrayList::new));
         Iterables.removeIf(values, Predicates.isNull());
         return values.size();
     }
