@@ -17,7 +17,6 @@ import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
@@ -38,29 +37,32 @@ import com.igot.cb.core.exception.ApplicationLogicError;
 public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
 
     private final Logger logger = LoggerFactory.getLogger(AssessmentServiceV4Impl.class);
-    @Autowired
     CbExtAssessmentServerProperties serverProperties;
 
-    @Autowired
     Producer kafkaProducer;
 
-    @Autowired
     OutboundRequestHandlerServiceImpl outboundRequestHandlerService;
 
-    @Autowired
     AssessmentUtilServiceV2 assessUtilServ;
 
-    @Autowired
     ObjectMapper mapper;
 
-    @Autowired
     AssessmentRepository assessmentRepository;
 
-    @Autowired
     AccessTokenValidator accessTokenValidator;
 
-    @Autowired
     ContentService contentService;
+
+    public AssessmentServiceV4Impl(CbExtAssessmentServerProperties serverProperties, Producer kafkaProducer, OutboundRequestHandlerServiceImpl outboundRequestHandlerService, AssessmentUtilServiceV2 assessUtilServ, ObjectMapper mapper, AssessmentRepository assessmentRepository, AccessTokenValidator accessTokenValidator, ContentService contentService) {
+        this.serverProperties = serverProperties;
+        this.kafkaProducer = kafkaProducer;
+        this.outboundRequestHandlerService = outboundRequestHandlerService;
+        this.assessUtilServ = assessUtilServ;
+        this.mapper = mapper;
+        this.assessmentRepository = assessmentRepository;
+        this.accessTokenValidator = accessTokenValidator;
+        this.contentService = contentService;
+    }
 
     @Override
     public SBApiResponse retakeAssessment(String assessmentIdentifier, String token, Boolean editMode) {
@@ -137,15 +139,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
             }
             logger.info(String.format("ReadAssessment... UserId: %s, AssessmentIdentifier: %s", userId, assessmentIdentifier));
 
-            Map<String, Object> assessmentAllDetail = null ;
-
-            if(editMode) {
-                assessmentAllDetail = assessUtilServ.fetchHierarchyFromAssessServc(assessmentIdentifier,token);
-            }
-            else {
-                assessmentAllDetail = assessUtilServ
-                        .readAssessmentHierarchyFromCache(assessmentIdentifier,editMode,token);
-            }
+            Map<String, Object> assessmentAllDetail = fetchAssessmentHierarchy(assessmentIdentifier, token, editMode);
 
             if (MapUtils.isEmpty(assessmentAllDetail)) {
                 updateErrorDetails(response, Constants.ASSESSMENT_HIERARCHY_READ_FAILED,
@@ -172,62 +166,16 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                     if (StringUtils.isNotBlank(errMsg)) {
                         return response;
                     }
-                    int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
-                    Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration,
-                            assessmentStartTime, 0);
-                    Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
-                    assessmentData.put(Constants.START_TIME, assessmentStartTime);
-                    assessmentData.put(Constants.END_TIME, assessmentEndTime);
-                    response.getResult().put(Constants.QUESTION_SET, assessmentData);
-                    Boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId,
-                            assessmentIdentifier, assessmentStartTime, assessmentEndTime,
-                            (Map<String, Object>) (response.getResult().get(Constants.QUESTION_SET)),
-                            Constants.NOT_SUBMITTED);
-                    if (Boolean.FALSE.equals(isAssessmentUpdatedToDB)) {
-                        errMsg = Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
-                    }
+                    errMsg = startNewAttempt(response, assessmentAllDetail, assessmentIdentifier, userId,
+                            assessmentStartTime);
                 }
             } else {
-                logger.info("Assessment read... user has details... ");
-                Object endTimeObj = existingDataList.get(0).get(Constants.END_TIME);
-                Date existingAssessmentEndTime = endTimeObj instanceof Instant
-                        ? Date.from((Instant) endTimeObj)
-                        : (Date) endTimeObj;
-                if (assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0
-                        && Constants.NOT_SUBMITTED.equalsIgnoreCase((String) existingDataList.get(0).get(Constants.STATUS))) {
-                    String questionSetFromAssessmentString = (String) existingDataList.get(0)
-                            .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
-                    Map<String, Object> questionSetFromAssessment = new Gson().fromJson(
-                            questionSetFromAssessmentString, new TypeToken<HashMap<String, Object>>() {
-                            }.getType());
-                    questionSetFromAssessment.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
-                    questionSetFromAssessment.put(Constants.END_TIME,
-                            existingAssessmentEndTime);
-                    response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
-                } else if ((assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0
-                        && ((String) existingDataList.get(0).get(Constants.STATUS))
-                                .equalsIgnoreCase(Constants.SUBMITTED))
-                        || assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) > 0) {
-                    logger.info(
-                            "Incase the assessment is submitted before the end time, or the endtime has exceeded, read assessment freshly ");
-                    errMsg = assessUtilServ.validateContextLocking(assessmentAllDetail, parentContextId, response, userId, assessmentIdentifier);
-                    if (StringUtils.isNotBlank(errMsg)) {
-                        return response;
-                    }
-                    Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
-                    int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
-                    Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
-                    assessmentData.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
-                    assessmentData.put(Constants.END_TIME, assessmentEndTime.toEpochMilli());
-                    response.getResult().put(Constants.QUESTION_SET, assessmentData);
-
-                    Boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId,
-                            assessmentIdentifier, assessmentStartTime, assessmentEndTime,
-                            assessmentData, Constants.NOT_SUBMITTED);
-                    if (Boolean.FALSE.equals(isAssessmentUpdatedToDB)) {
-                        errMsg = Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
-                    }
+                AttemptOutcome outcome = resumeOrRestartAttempt(response, assessmentAllDetail, assessmentIdentifier,
+                        parentContextId, userId, assessmentStartTime, existingDataList);
+                if (outcome.contextLockFailed()) {
+                    return response;
                 }
+                errMsg = outcome.errMsg();
             }
         } catch (Exception e) {
             errMsg = String.format("Error while reading assessment. Exception: %s", e.getMessage());
@@ -237,6 +185,104 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
             updateErrorDetails(response, errMsg, HttpStatus.INTERNAL_SERVER_ERROR);
         }
         return response;
+    }
+
+    /**
+     * Result of continuing an existing attempt. {@code contextLockFailed} means the caller must
+     * return the response untouched, as context-lock validation has already populated it.
+     */
+    private record AttemptOutcome(String errMsg, boolean contextLockFailed) {
+    }
+
+    /**
+     * The user already has a record: hand back the in-progress attempt while its window is open,
+     * otherwise start a fresh one.
+     */
+    private AttemptOutcome resumeOrRestartAttempt(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                                  String assessmentIdentifier, String parentContextId, String userId,
+                                                  Instant assessmentStartTime,
+                                                  List<Map<String, Object>> existingDataList) {
+        logger.info("Assessment read... user has details... ");
+        Map<String, Object> existingData = existingDataList.get(0);
+        Object endTimeObj = existingData.get(Constants.END_TIME);
+        Date existingAssessmentEndTime = endTimeObj instanceof Instant instant
+                ? Date.from(instant)
+                : (Date) endTimeObj;
+        boolean withinAssessmentWindow = assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) < 0;
+        String status = (String) existingData.get(Constants.STATUS);
+        if (withinAssessmentWindow && Constants.NOT_SUBMITTED.equalsIgnoreCase(status)) {
+            resumeAttempt(response, existingData, assessmentStartTime, existingAssessmentEndTime);
+            return new AttemptOutcome("", false);
+        }
+        if ((withinAssessmentWindow && status.equalsIgnoreCase(Constants.SUBMITTED))
+                || assessmentStartTime.compareTo(existingAssessmentEndTime.toInstant()) > 0) {
+            logger.info(
+                    "Incase the assessment is submitted before the end time, or the endtime has exceeded, read assessment freshly ");
+            String lockErrMsg = assessUtilServ.validateContextLocking(assessmentAllDetail, parentContextId, response,
+                    userId, assessmentIdentifier);
+            if (StringUtils.isNotBlank(lockErrMsg)) {
+                return new AttemptOutcome(lockErrMsg, true);
+            }
+            return new AttemptOutcome(restartAttempt(response, assessmentAllDetail, assessmentIdentifier, userId,
+                    assessmentStartTime), false);
+        }
+        return new AttemptOutcome("", false);
+    }
+
+    /** In edit mode the hierarchy is always read live; otherwise the cached copy is used. */
+    private Map<String, Object> fetchAssessmentHierarchy(String assessmentIdentifier, String token, boolean editMode) {
+        if (editMode) {
+            return assessUtilServ.fetchHierarchyFromAssessServc(assessmentIdentifier, token);
+        }
+        return assessUtilServ.readAssessmentHierarchyFromCache(assessmentIdentifier, editMode, token);
+    }
+
+    /**
+     * First attempt for this user — build the question set, open the start/end window and persist it.
+     * Returns the error message, or an empty string on success.
+     */
+    private String startNewAttempt(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                   String assessmentIdentifier, String userId, Instant assessmentStartTime) {
+        int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
+        Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
+        Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
+        assessmentData.put(Constants.START_TIME, assessmentStartTime);
+        assessmentData.put(Constants.END_TIME, assessmentEndTime);
+        response.getResult().put(Constants.QUESTION_SET, assessmentData);
+        boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier,
+                assessmentStartTime, assessmentEndTime,
+                (Map<String, Object>) (response.getResult().get(Constants.QUESTION_SET)), Constants.NOT_SUBMITTED);
+        return isAssessmentUpdatedToDB ? "" : Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
+    }
+
+    /** Attempt still open — hand back the question set stored against the user's record. */
+    private void resumeAttempt(SBApiResponse response, Map<String, Object> existingData, Instant assessmentStartTime,
+                               Date existingAssessmentEndTime) {
+        String questionSetFromAssessmentString = (String) existingData.get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
+        Map<String, Object> questionSetFromAssessment = new Gson().fromJson(questionSetFromAssessmentString,
+                new TypeToken<HashMap<String, Object>>() {
+                }.getType());
+        questionSetFromAssessment.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
+        questionSetFromAssessment.put(Constants.END_TIME, existingAssessmentEndTime);
+        response.getResult().put(Constants.QUESTION_SET, questionSetFromAssessment);
+    }
+
+    /**
+     * Previous attempt was submitted, or its window expired — read the assessment freshly and open a
+     * new window. Returns the error message, or an empty string on success.
+     */
+    private String restartAttempt(SBApiResponse response, Map<String, Object> assessmentAllDetail,
+                                  String assessmentIdentifier, String userId, Instant assessmentStartTime) {
+        Map<String, Object> assessmentData = readAssessmentLevelData(assessmentAllDetail);
+        int expectedDuration = (Integer) assessmentAllDetail.get(Constants.EXPECTED_DURATION);
+        Instant assessmentEndTime = calculateAssessmentSubmitTime(expectedDuration, assessmentStartTime, 0);
+        assessmentData.put(Constants.START_TIME, assessmentStartTime.toEpochMilli());
+        assessmentData.put(Constants.END_TIME, assessmentEndTime.toEpochMilli());
+        response.getResult().put(Constants.QUESTION_SET, assessmentData);
+
+        boolean isAssessmentUpdatedToDB = assessmentRepository.addUserAssesmentDataToDB(userId, assessmentIdentifier,
+                assessmentStartTime, assessmentEndTime, assessmentData, Constants.NOT_SUBMITTED);
+        return isAssessmentUpdatedToDB ? "" : Constants.ASSESSMENT_DATA_START_TIME_NOT_UPDATED;
     }
 
     @Override
@@ -327,7 +373,6 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
     public SBApiResponse submitAssessmentAsync(Map<String, Object> submitRequest, String userAuthToken,boolean editMode) {
         logger.info("AssessmentServiceV4Impl::submitAssessmentAsync.. started");
         SBApiResponse outgoingResponse = createDefaultResponse(Constants.API_SUBMIT_ASSESSMENT);
-        String progressUpdateAPIRespone = "";
         try {
             String userId = accessTokenValidator.fetchUserIdFromAccessToken(userAuthToken);
             if (ObjectUtils.isEmpty(userId)) {
@@ -335,129 +380,52 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                 return outgoingResponse;
             }
             String assessmentIdFromRequest = (String) submitRequest.get(Constants.IDENTIFIER);
-            String errMsg;
-            List<Map<String, Object>> sectionListFromSubmitRequest = new ArrayList<>();
-            List<Map<String, Object>> hierarchySectionList = new ArrayList<>();
-            Map<String, Object> assessmentHierarchy = new HashMap<>();
-            Map<String, Object> existingAssessmentData = new HashMap<>();
+            SubmitAssessmentData submitData = new SubmitAssessmentData();
 
-            errMsg = validateSubmitAssessmentRequest(submitRequest, userId, hierarchySectionList,
-                    sectionListFromSubmitRequest, assessmentHierarchy, existingAssessmentData,userAuthToken,editMode);
-
+            String errMsg = validateSubmitAssessmentRequest(submitRequest, userId, submitData, userAuthToken,
+                    editMode);
+            if (StringUtils.isBlank(errMsg)) {
+                errMsg = assessUtilServ.validateAssessmentLanguageAndNodes(submitRequest);
+            }
             if (StringUtils.isNotBlank(errMsg)) {
                 updateErrorDetails(outgoingResponse, errMsg, HttpStatus.BAD_REQUEST);
                 return outgoingResponse;
             }
 
-            errMsg = assessUtilServ.validateAssessmentLanguageAndNodes(submitRequest);
-
-            if (StringUtils.isNotBlank(errMsg)) {
-                updateErrorDetails(outgoingResponse, errMsg, HttpStatus.BAD_REQUEST);
-                return outgoingResponse;
-            }
-
+            Map<String, Object> assessmentHierarchy = submitData.assessmentHierarchy;
             String assessmentPrimaryCategory = (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY);
-            Map<String,Object> courseCategoryMap=contentService.readContent((String) submitRequest.get(Constants.COURSE_ID));
-            String courseCategory = "";
-            if (MapUtils.isNotEmpty(courseCategoryMap)) {
-                courseCategory = (String) courseCategoryMap.get(Constants.COURSE_CATEGORY);
-            }
-                String scoreCutOffType = ((String) assessmentHierarchy.get(Constants.SCORE_CUTOFF_TYPE)).toLowerCase();
-                List<Map<String, Object>> sectionLevelsResults = new ArrayList<>();
-                for (Map<String, Object> hierarchySection : hierarchySectionList) {
-                    String hierarchySectionId = (String) hierarchySection.get(Constants.IDENTIFIER);
-                    String userSectionId = "";
-                    Map<String, Object> userSectionData = new HashMap<>();
-                    for (Map<String, Object> sectionFromSubmitRequest : sectionListFromSubmitRequest) {
-                        userSectionId = (String) sectionFromSubmitRequest.get(Constants.IDENTIFIER);
-                        if (userSectionId.equalsIgnoreCase(hierarchySectionId)) {
-                            userSectionData = sectionFromSubmitRequest;
-                            break;
-                        }
-                    }
-
-                    hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
-                    List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
-                    if (userSectionData.containsKey(Constants.CHILDREN)
-                            && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
-                        questionsListFromSubmitRequest = (List<Map<String, Object>>) userSectionData
-                                .get(Constants.CHILDREN);
-                    }
-                    List<String> desiredKeys = List.of(Constants.IDENTIFIER);
-                    List<Object> questionsList = questionsListFromSubmitRequest.stream()
-                            .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
-                    List<String> questionsListFromAssessmentHierarchy = questionsList.stream()
-                            .map(object -> Objects.toString(object, null)).collect(Collectors.toList());
-                    Map<String, Object> result = new HashMap<>();
-                    switch (scoreCutOffType) {
-                        case Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection,
-                                    assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
-                                            questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,userAuthToken))));
-                            Map<String, Object> finalRes= calculateAssessmentFinalResults(result);
-                            outgoingResponse.getResult().putAll(finalRes);
-                            outgoingResponse.getResult().put(Constants.PRIMARY_CATEGORY, assessmentPrimaryCategory);
-                            if (!Constants.PRACTICE_QUESTION_SET.equalsIgnoreCase(assessmentPrimaryCategory) && !editMode) {
-                                String questionSetFromAssessmentString = (String) existingAssessmentData
-                                        .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
-                                Map<String,Object> questionSetFromAssessment = null;
-                                if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
-                                    questionSetFromAssessment = mapper.readValue(questionSetFromAssessmentString,
-                                            new TypeReference<Map<String, Object>>() {
-                                            });
-                                }
-                                writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, finalRes,
-                                        (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY),courseCategory,userAuthToken,true,(String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG));
-                            } else if (Constants.PRACTICE_QUESTION_SET.equalsIgnoreCase(assessmentPrimaryCategory)){
-                                SBApiResponse contentUpdateResponse = new SBApiResponse();
-                                String response=contentService.updateContentProgress(userAuthToken,submitRequest,userId,contentUpdateResponse);
-                                if(!Constants.SUCCESS.equalsIgnoreCase(response)){
-                                    logger.error("AssessmentServiceV4Impl : submitAssessmentAsync : Update while updating the progress of practice assessment");
-                                }
-                            }
-
-                            return outgoingResponse;
-                        }
-                        case Constants.SECTION_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection,
-                                    assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
-                                            questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,userAuthToken))));
-                            sectionLevelsResults.add(result);
-                        }
-                            break;
-                        default:
-                            break;
-                    }
-                }
-                if (Constants.SECTION_LEVEL_SCORE_CUTOFF.equalsIgnoreCase(scoreCutOffType)) {
-                    Map<String, Object> result = calculateSectionFinalResults(sectionLevelsResults);
-                    outgoingResponse.getResult().putAll(result);
-                    outgoingResponse.getParams().setStatus(Constants.SUCCESS);
-                    outgoingResponse.setResponseCode(HttpStatus.OK);
+            SubmissionContext context = new SubmissionContext(submitRequest, userId, userAuthToken,
+                    assessmentHierarchy, submitData.existingAssessmentData, readCourseCategory(submitRequest));
+            String scoreCutOffType = ((String) assessmentHierarchy.get(Constants.SCORE_CUTOFF_TYPE)).toLowerCase();
+            List<Map<String, Object>> sectionLevelsResults = new ArrayList<>();
+            for (Map<String, Object> hierarchySection : submitData.hierarchySectionList) {
+                UserSection userSection = findUserSectionData(submitData.sectionListFromSubmitRequest,
+                        (String) hierarchySection.get(Constants.IDENTIFIER));
+                hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
+                List<Map<String, Object>> questionsListFromSubmitRequest = sectionChildren(userSection.data());
+                List<String> questionsListFromAssessmentHierarchy = questionIdsFrom(questionsListFromSubmitRequest);
+                if (Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType)) {
+                    Map<String, Object> finalRes = calculateAssessmentFinalResults(scoreSection(hierarchySection,
+                            questionsListFromAssessmentHierarchy, questionsListFromSubmitRequest,
+                            assessmentIdFromRequest, editMode, userAuthToken));
+                    outgoingResponse.getResult().putAll(finalRes);
                     outgoingResponse.getResult().put(Constants.PRIMARY_CATEGORY, assessmentPrimaryCategory);
-                    if (!Constants.PRACTICE_QUESTION_SET.equalsIgnoreCase(assessmentPrimaryCategory)) {
-                        String questionSetFromAssessmentString = (String) existingAssessmentData
-                                .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
-                        Map<String,Object> questionSetFromAssessment = null;
-                        if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
-                            questionSetFromAssessment = mapper.readValue(questionSetFromAssessmentString,
-                                    new TypeReference<Map<String, Object>>() {
-                                    });
-                        }
-                        writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, result,
-                                (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY),courseCategory,userAuthToken,true,(String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG));
-                    } else {
-                        SBApiResponse contentUpdateResponse = new SBApiResponse();
-                        String response=contentService.updateContentProgress(userAuthToken,submitRequest,userId,contentUpdateResponse);
-                        if(!Constants.SUCCESS.equalsIgnoreCase(response)){
-                            logger.error("AssessmentServiceV4Impl : submitAssessmentAsync : Update while updating the progress of practice assessment");
-                        }
-                    }
+                    persistSubmissionOutcome(context, finalRes, editMode);
                     return outgoingResponse;
                 }
+                if (Constants.SECTION_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType)) {
+                    sectionLevelsResults.add(scoreSection(hierarchySection, questionsListFromAssessmentHierarchy,
+                            questionsListFromSubmitRequest, assessmentIdFromRequest, editMode, userAuthToken));
+                }
+            }
+            if (Constants.SECTION_LEVEL_SCORE_CUTOFF.equalsIgnoreCase(scoreCutOffType)) {
+                finaliseSectionLevelSubmission(outgoingResponse, sectionLevelsResults, context,
+                        assessmentPrimaryCategory);
+                return outgoingResponse;
+            }
 
         } catch (Exception e) {
-            String errMsg = String.format("Failed to process assessment submit request. Exception: ", e.getMessage());
+            String errMsg = String.format("Failed to process assessment submit request. Exception: %s", e.getMessage());
             logger.error(errMsg, e);
             updateErrorDetails(outgoingResponse, errMsg, HttpStatus.INTERNAL_SERVER_ERROR);
             assessUtilServ.publishFailedAssessmentAuditEvent((String) submitRequest.get(Constants.USER_ID),
@@ -466,125 +434,257 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
         return outgoingResponse;
     }
 
+    /** What the async submit path needs after its preconditions have been checked. */
+    private record AsyncSubmitData(String assessmentIdFromRequest, Map<String, Object> assessmentHierarchy,
+                                   List<Map<String, Object>> hierarchySectionList,
+                                   List<Map<String, Object>> sectionListFromSubmitRequest,
+                                   Map<String, Object> existingAssessmentData) {
+    }
+
+    /**
+     * Reads the hierarchy and the user's submission record, checking the preconditions for an async
+     * submit. Returns {@code null} when it cannot proceed — the reason has already been logged, which
+     * is what the original inline checks did before returning.
+     */
+    private AsyncSubmitData loadAsyncSubmitData(Map<String, Object> submitRequest, String userId, boolean editMode,
+                                                String token) {
+        String assessmentIdFromRequest = (String) submitRequest.get(Constants.IDENTIFIER);
+        Map<String, Object> assessmentHierarchy = assessUtilServ
+                .readAssessmentHierarchyFromCache(assessmentIdFromRequest, editMode, token);
+        if (MapUtils.isEmpty(assessmentHierarchy)) {
+            logger.error(Constants.READ_ASSESSMENT_FAILED, new Exception(Constants.READ_ASSESSMENT_FAILED));
+            return null;
+        }
+        List<Map<String, Object>> existingDataList = assessUtilServ.readUserSubmittedAssessmentRecords(userId,
+                assessmentIdFromRequest);
+        if (existingDataList.isEmpty()) {
+            logger.error(Constants.USER_ASSESSMENT_DATA_NOT_PRESENT,
+                    new Exception(Constants.USER_ASSESSMENT_DATA_NOT_PRESENT));
+            return null;
+        }
+        if (Constants.SUBMITTED.equalsIgnoreCase((String) existingDataList.get(0).get(Constants.STATUS))) {
+            logger.error(Constants.ASSESSMENT_ALREADY_SUBMITTED,
+                    new Exception(Constants.ASSESSMENT_ALREADY_SUBMITTED));
+            return null;
+        }
+        return new AsyncSubmitData(assessmentIdFromRequest, assessmentHierarchy,
+                (List<Map<String, Object>>) assessmentHierarchy.get(Constants.CHILDREN),
+                (List<Map<String, Object>>) submitRequest.get(Constants.CHILDREN), existingDataList.get(0));
+    }
+
+    /** The stored question set for an async submit, and the question ids for the section being scored. */
+    private record AsyncSectionQuestions(Map<String, Object> questionSet, List<String> questionIds) {
+    }
+
+    /**
+     * Resolves the question ids to score a section against, from the question set stored on the user's
+     * record. Returns {@code null} when that question set is missing — the caller logs and stops, as
+     * the original inline {@code else} branch did. When no section matches, the ids carried in from the
+     * previous iteration are kept, again matching the original.
+     */
+    private AsyncSectionQuestions resolveAsyncSectionQuestions(Map<String, Object> existingAssessmentData,
+                                                               Map<String, Object> questionSetFromAssessment,
+                                                               String userSectionId, List<String> currentQuestionIds)
+            throws IOException {
+        Map<String, Object> questionSet = questionSetFromAssessment;
+        String questionSetFromAssessmentString = (String) existingAssessmentData
+                .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
+        if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
+            questionSet = mapper.readValue(questionSetFromAssessmentString, new TypeReference<Map<String, Object>>() {
+            });
+        }
+        if (questionSet == null || questionSet.get(Constants.CHILDREN) == null) {
+            return null;
+        }
+        List<Map<String, Object>> sections = (List<Map<String, Object>>) questionSet.get(Constants.CHILDREN);
+        for (Map<String, Object> section : sections) {
+            if (userSectionId.equalsIgnoreCase((String) section.get(Constants.IDENTIFIER))) {
+                return new AsyncSectionQuestions(questionSet, (List<String>) section.get(Constants.CHILD_NODES));
+            }
+        }
+        return new AsyncSectionQuestions(questionSet, currentQuestionIds);
+    }
+
+    /** Rolls the per-section scores into the response and persists the submission. */
+    private void finaliseSectionLevelSubmission(SBApiResponse outgoingResponse,
+                                                List<Map<String, Object>> sectionLevelsResults,
+                                                SubmissionContext context, String assessmentPrimaryCategory)
+            throws IOException {
+        Map<String, Object> result = calculateSectionFinalResults(sectionLevelsResults);
+        outgoingResponse.getResult().putAll(result);
+        outgoingResponse.getParams().setStatus(Constants.SUCCESS);
+        outgoingResponse.setResponseCode(HttpStatus.OK);
+        outgoingResponse.getResult().put(Constants.PRIMARY_CATEGORY, assessmentPrimaryCategory);
+        persistSubmissionOutcome(context, result, false);
+    }
+
+    /** Everything a submission needs to be persisted, grouped so it can be passed as one argument. */
+    private record SubmissionContext(Map<String, Object> submitRequest, String userId, String userAuthToken,
+                                     Map<String, Object> assessmentHierarchy,
+                                     Map<String, Object> existingAssessmentData, String courseCategory) {
+    }
+
+    private String readCourseCategory(Map<String, Object> submitRequest) {
+        Map<String, Object> courseCategoryMap = contentService
+                .readContent((String) submitRequest.get(Constants.COURSE_ID));
+        if (MapUtils.isNotEmpty(courseCategoryMap)) {
+            return (String) courseCategoryMap.get(Constants.COURSE_CATEGORY);
+        }
+        return "";
+    }
+
+    /** The submitted section matching a hierarchy section, plus the id last examined while looking. */
+    private record UserSection(String id, Map<String, Object> data) {
+    }
+
+    /**
+     * Finds the submitted section matching a hierarchy section. When none matches, {@code data} is an
+     * empty map and {@code id} is the id of the last section examined — matching the original loop,
+     * which left {@code userSectionId} holding that value rather than resetting it.
+     */
+    private UserSection findUserSectionData(List<Map<String, Object>> sectionListFromSubmitRequest,
+                                            String hierarchySectionId) {
+        String userSectionId = "";
+        for (Map<String, Object> sectionFromSubmitRequest : sectionListFromSubmitRequest) {
+            userSectionId = (String) sectionFromSubmitRequest.get(Constants.IDENTIFIER);
+            if (userSectionId.equalsIgnoreCase(hierarchySectionId)) {
+                return new UserSection(userSectionId, sectionFromSubmitRequest);
+            }
+        }
+        return new UserSection(userSectionId, new HashMap<>());
+    }
+
+    /** The submitted children of a section, or an empty list when it carries none. */
+    private List<Map<String, Object>> sectionChildren(Map<String, Object> userSectionData) {
+        if (userSectionData.containsKey(Constants.CHILDREN)
+                && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
+            return (List<Map<String, Object>>) userSectionData.get(Constants.CHILDREN);
+        }
+        return new ArrayList<>();
+    }
+
+    /** The identifiers of the questions carried by a submitted section. */
+    private List<String> questionIdsFrom(List<Map<String, Object>> questionsListFromSubmitRequest) {
+        List<String> desiredKeys = List.of(Constants.IDENTIFIER);
+        List<Object> questionsList = questionsListFromSubmitRequest.stream()
+                .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
+        return questionsList.stream().map(object -> Objects.toString(object, null))
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    /** Scores one section of the submission against the assessment hierarchy. */
+    private Map<String, Object> scoreSection(Map<String, Object> hierarchySection,
+                                             List<String> questionsListFromAssessmentHierarchy,
+                                             List<Map<String, Object>> questionsListFromSubmitRequest,
+                                             String assessmentIdFromRequest, boolean editMode, String userAuthToken)
+            throws IOException {
+        Map<String, Object> result = new HashMap<>();
+        result.putAll(createResponseMapWithProperStructure(hierarchySection,
+                assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
+                        questionsListFromSubmitRequest,
+                        assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,
+                                assessmentIdFromRequest, editMode, userAuthToken))));
+        return result;
+    }
+
+    /**
+     * Writes the submission and fires its Kafka event. A practice question set is never persisted —
+     * it only updates content progress. {@code editMode} suppresses the write entirely, matching the
+     * original assessment-level behaviour; the section-level path passes {@code false}.
+     */
+    private void persistSubmissionOutcome(SubmissionContext context, Map<String, Object> result, boolean editMode)
+            throws IOException {
+        String assessmentPrimaryCategory = (String) context.assessmentHierarchy().get(Constants.PRIMARY_CATEGORY);
+        boolean practiceQuestionSet = Constants.PRACTICE_QUESTION_SET.equalsIgnoreCase(assessmentPrimaryCategory);
+        if (!practiceQuestionSet && !editMode) {
+            String questionSetFromAssessmentString = (String) context.existingAssessmentData()
+                    .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
+            Map<String, Object> questionSetFromAssessment = null;
+            if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
+                questionSetFromAssessment = mapper.readValue(questionSetFromAssessmentString,
+                        new TypeReference<Map<String, Object>>() {
+                        });
+            }
+            writeDataToDatabaseAndTriggerKafkaEvent(new KafkaEventContext(context.submitRequest(), context.userId(),
+                            context.userAuthToken(), assessmentPrimaryCategory, context.courseCategory(),
+                            (String) context.assessmentHierarchy().get(Constants.CONTEXT_CATEGORY_TAG), true),
+                    questionSetFromAssessment, result);
+        } else if (practiceQuestionSet) {
+            updatePracticeAssessmentProgress(context);
+        }
+    }
+
+    private void updatePracticeAssessmentProgress(SubmissionContext context) {
+        SBApiResponse contentUpdateResponse = new SBApiResponse();
+        String response = contentService.updateContentProgress(context.userAuthToken(), context.submitRequest(),
+                context.userId(), contentUpdateResponse);
+        if (!Constants.SUCCESS.equalsIgnoreCase(response)) {
+            logger.error("AssessmentServiceV4Impl : submitAssessmentAsync : Update while updating the progress of practice assessment");
+        }
+    }
+
     public void handleAssessmentSubmitRequest(Map<String, Object> asyncRequest,boolean editMode,String token) {
         String userId = (String) asyncRequest.get(Constants.USER_ID_CONSTANT);
         Map<String, Object> submitRequest = (Map<String, Object>) asyncRequest.get(Constants.REQUEST);
 
         String errMsg = "";
         try {
-            String assessmentIdFromRequest = (String) submitRequest.get(Constants.IDENTIFIER);
-            Map<String, Object> assessmentHierarchy = assessUtilServ
-                    .readAssessmentHierarchyFromCache(assessmentIdFromRequest,editMode,token);
-            if (MapUtils.isEmpty(assessmentHierarchy)) {
-                logger.error(Constants.READ_ASSESSMENT_FAILED, new Exception(Constants.READ_ASSESSMENT_FAILED));
+            AsyncSubmitData data = loadAsyncSubmitData(submitRequest, userId, editMode, token);
+            if (data == null) {
                 return;
             }
-
-            List<Map<String, Object>> hierarchySectionList = (List<Map<String, Object>>) assessmentHierarchy
-                    .get(Constants.CHILDREN);
-            List<Map<String, Object>> sectionListFromSubmitRequest = (List<Map<String, Object>>) submitRequest
-                    .get(Constants.CHILDREN);
-
-            List<Map<String, Object>> existingDataList = assessUtilServ.readUserSubmittedAssessmentRecords(
-                    userId, assessmentIdFromRequest);
-            if (existingDataList.isEmpty()) {
-                errMsg = Constants.USER_ASSESSMENT_DATA_NOT_PRESENT;
-                logger.error(errMsg, new Exception(errMsg));
-                return;
-            }
-
-            if (Constants.SUBMITTED.equalsIgnoreCase((String) existingDataList.get(0).get(Constants.STATUS))) {
-                errMsg = Constants.ASSESSMENT_ALREADY_SUBMITTED;
-                logger.error(errMsg, new Exception(errMsg));
-                return;
-            }
-            Map<String, Object> existingAssessmentData = existingDataList.get(0);
-
+            Map<String, Object> assessmentHierarchy = data.assessmentHierarchy();
             List<String> questionsListFromAssessmentHierarchy = new ArrayList<>();
-
             String scoreCutOffType = ((String) assessmentHierarchy.get(Constants.SCORE_CUTOFF_TYPE)).toLowerCase();
             List<Map<String, Object>> sectionLevelsResults = new ArrayList<>();
             Map<String, Object> questionSetFromAssessment = new HashMap<>();
-            for (Map<String, Object> hierarchySection : hierarchySectionList) {
-                String hierarchySectionId = (String) hierarchySection.get(Constants.IDENTIFIER);
-                String userSectionId = "";
-                Map<String, Object> userSectionData = new HashMap<>();
-                for (Map<String, Object> sectionFromSubmitRequest : sectionListFromSubmitRequest) {
-                    userSectionId = (String) sectionFromSubmitRequest.get(Constants.IDENTIFIER);
-                    if (userSectionId.equalsIgnoreCase(hierarchySectionId)) {
-                        userSectionData = sectionFromSubmitRequest;
-                        break;
-                    }
+            boolean practiceQuestionSet = ((String) (assessmentHierarchy.get(Constants.PRIMARY_CATEGORY)))
+                    .equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET);
+            List<Map<String, Object>> sectionsToScore = practiceQuestionSet
+                    ? Collections.emptyList()
+                    : data.hierarchySectionList();
+            for (Map<String, Object> hierarchySection : sectionsToScore) {
+                UserSection userSection = findUserSectionData(data.sectionListFromSubmitRequest(),
+                        (String) hierarchySection.get(Constants.IDENTIFIER));
+                AsyncSectionQuestions sectionQuestions = resolveAsyncSectionQuestions(data.existingAssessmentData(),
+                        questionSetFromAssessment, userSection.id(), questionsListFromAssessmentHierarchy);
+                if (sectionQuestions == null) {
+                    errMsg = "Question Set From The Database returns Null. Failed to calculate assessment score.";
+                    logger.error(errMsg, new Exception(errMsg));
+                    break;
                 }
-                if (!((String) (assessmentHierarchy.get(Constants.PRIMARY_CATEGORY)))
-                        .equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET)) {
+                questionSetFromAssessment = sectionQuestions.questionSet();
+                questionsListFromAssessmentHierarchy = sectionQuestions.questionIds();
 
-                    String questionSetFromAssessmentString = (String) existingAssessmentData
-                            .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
-                    if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
-                        questionSetFromAssessment = mapper.readValue(questionSetFromAssessmentString,
-                                new TypeReference<Map<String, Object>>() {
-                                });
-                    }
-
-                    if (questionSetFromAssessment != null
-                            && questionSetFromAssessment.get(Constants.CHILDREN) != null) {
-                        List<Map<String, Object>> sections = (List<Map<String, Object>>) questionSetFromAssessment
-                                .get(Constants.CHILDREN);
-                        for (Map<String, Object> section : sections) {
-                            String sectionId = (String) section.get(Constants.IDENTIFIER);
-                            if (userSectionId.equalsIgnoreCase(sectionId)) {
-                                questionsListFromAssessmentHierarchy = (List<String>) section
-                                        .get(Constants.CHILD_NODES);
-                                break;
-                            }
-                        }
+                hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
+                List<Map<String, Object>> questionsListFromSubmitRequest = sectionChildren(userSection.data());
+                boolean assessmentLevel = Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType);
+                if (assessmentLevel || Constants.SECTION_LEVEL_SCORE_CUTOFF.equals(scoreCutOffType)) {
+                    Map<String, Object> result = scoreSection(hierarchySection, questionsListFromAssessmentHierarchy,
+                            questionsListFromSubmitRequest, data.assessmentIdFromRequest(), editMode, token);
+                    if (assessmentLevel) {
+                        Map<String, Object> finalResult = calculateAssessmentFinalResults(result);
+                        finalResult.put(Constants.STATUS_IS_IN_PROGRESS, false);
+                        writeDataToDatabaseAndTriggerKafkaEvent(new KafkaEventContext(submitRequest, userId, null,
+                                        (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY), null,
+                                        (String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG), false),
+                                questionSetFromAssessment, finalResult);
                     } else {
-                        errMsg = "Question Set From The Database returns Null. Failed to calculate assessment score.";
-                        logger.error(errMsg, new Exception(errMsg));
-                        break;
+                        sectionLevelsResults.add(result);
                     }
-
-                    hierarchySection.put(Constants.SCORE_CUTOFF_TYPE, scoreCutOffType);
-                    List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
-                    if (userSectionData.containsKey(Constants.CHILDREN)
-                            && !ObjectUtils.isEmpty(userSectionData.get(Constants.CHILDREN))) {
-                        questionsListFromSubmitRequest = (List<Map<String, Object>>) userSectionData
-                                .get(Constants.CHILDREN);
-                    }
-                    Map<String, Object> result = new HashMap<>();
-                    switch (scoreCutOffType) {
-                        case Constants.ASSESSMENT_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection,
-                                    assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
-                                            questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,token))));
-                            Map<String, Object> finalResult = calculateAssessmentFinalResults(result);
-                            finalResult.put(Constants.STATUS_IS_IN_PROGRESS, false);
-                            writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment,
-                                    finalResult, (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY),null,null,false,(String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG));
-                        }
-                        case Constants.SECTION_LEVEL_SCORE_CUTOFF: {
-                            result.putAll(createResponseMapWithProperStructure(hierarchySection,
-                                    assessUtilServ.validateQumlAssessment(questionsListFromAssessmentHierarchy,
-                                            questionsListFromSubmitRequest,assessUtilServ.readQListfromCache(questionsListFromAssessmentHierarchy,assessmentIdFromRequest,editMode,token))));
-                            sectionLevelsResults.add(result);
-                        }
-                            break;
-                        default:
-                            break;
-                    }
-
                 }
             }
             if (errMsg.isEmpty() && !ObjectUtils.isEmpty(scoreCutOffType)
                     && scoreCutOffType.equalsIgnoreCase(Constants.SECTION_LEVEL_SCORE_CUTOFF)) {
                 Map<String, Object> result = calculateSectionFinalResults(sectionLevelsResults);
                 result.put(Constants.STATUS_IS_IN_PROGRESS, false);
-                writeDataToDatabaseAndTriggerKafkaEvent(submitRequest, userId, questionSetFromAssessment, result,
-                        (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY),null,null,false,(String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG));
+                writeDataToDatabaseAndTriggerKafkaEvent(new KafkaEventContext(submitRequest, userId, null,
+                                (String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY), null,
+                                (String) assessmentHierarchy.get(Constants.CONTEXT_CATEGORY_TAG), false),
+                        questionSetFromAssessment, result);
             }
         } catch (Exception e) {
-            errMsg = String.format("Failed to process assessent submit request. Exception: ", e.getMessage());
+            errMsg = String.format("Failed to process assessent submit request. Exception: %s", e.getMessage());
             logger.error(errMsg, e);
         }
     }
@@ -684,7 +784,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
             return result;
         }
 
-        Map<String, Object> userAssessmentAllDetail = new HashMap<String, Object>();
+        Map<String, Object> userAssessmentAllDetail = new HashMap<>();
 
         List<Map<String, Object>> existingDataList = assessUtilServ.readUserSubmittedAssessmentRecords(
                 userId, assessmentIdFromRequest);
@@ -741,14 +841,27 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
         return Collections.emptyList();
     }
 
-    private Boolean validateQuestionListRequest(List<String> identifierList, List<String> questionsFromAssessment) {
-        return (new HashSet<>(questionsFromAssessment).containsAll(identifierList)) ? Boolean.TRUE : Boolean.FALSE;
+    private boolean validateQuestionListRequest(List<String> identifierList, List<String> questionsFromAssessment) {
+        return new HashSet<>(questionsFromAssessment).containsAll(identifierList);
+    }
+
+    /**
+     * The four collections {@link #validateSubmitAssessmentRequest} fills in for its caller. Grouped
+     * into one object so the method stays within the parameter limit; the collections are still
+     * populated in place, exactly as when they were passed individually.
+     */
+    private static final class SubmitAssessmentData {
+        private final Map<String, Object> assessmentHierarchy = new HashMap<>();
+        private final List<Map<String, Object>> hierarchySectionList = new ArrayList<>();
+        private final List<Map<String, Object>> sectionListFromSubmitRequest = new ArrayList<>();
+        private final Map<String, Object> existingAssessmentData = new HashMap<>();
     }
 
     private String validateSubmitAssessmentRequest(Map<String, Object> submitRequest, String userId,
-                                                   List<Map<String, Object>> hierarchySectionList, List<Map<String, Object>> sectionListFromSubmitRequest,
-                                                   Map<String, Object> assessmentHierarchy, Map<String, Object> existingAssessmentData,
-                                                   String token, boolean editMode) throws Exception {
+                                                   SubmitAssessmentData submitData, String token, boolean editMode)
+            throws Exception {
+        Map<String, Object> assessmentHierarchy = submitData.assessmentHierarchy;
+        Map<String, Object> existingAssessmentData = submitData.existingAssessmentData;
 
         submitRequest.put(Constants.USER_ID, userId);
 
@@ -763,8 +876,8 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
             return Constants.READ_ASSESSMENT_FAILED;
         }
 
-        hierarchySectionList.addAll((List<Map<String, Object>>) assessmentHierarchy.get(Constants.CHILDREN));
-        sectionListFromSubmitRequest.addAll((List<Map<String, Object>>) submitRequest.get(Constants.CHILDREN));
+        submitData.hierarchySectionList.addAll((List<Map<String, Object>>) assessmentHierarchy.get(Constants.CHILDREN));
+        submitData.sectionListFromSubmitRequest.addAll((List<Map<String, Object>>) submitRequest.get(Constants.CHILDREN));
 
         if (((String) assessmentHierarchy.get(Constants.PRIMARY_CATEGORY)).equalsIgnoreCase(Constants.PRACTICE_QUESTION_SET) || editMode) {
             return "";
@@ -781,12 +894,12 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
 
         Object startTimeObj = existingAssessmentData.get(Constants.START_TIME);
         Instant assessmentStartTime;
-        if (startTimeObj instanceof Date) {
-            assessmentStartTime = ((Date) startTimeObj).toInstant();
-        } else if (startTimeObj instanceof Instant) {
-            assessmentStartTime = (Instant) startTimeObj;
-        } else if (startTimeObj instanceof String) {
-            assessmentStartTime = Instant.parse((String) startTimeObj);
+        if (startTimeObj instanceof Date date) {
+            assessmentStartTime = date.toInstant();
+        } else if (startTimeObj instanceof Instant instant) {
+            assessmentStartTime = instant;
+        } else if (startTimeObj instanceof String startTime) {
+            assessmentStartTime = Instant.parse(startTime);
         } else {
             return Constants.READ_ASSESSMENT_START_TIME_FAILED;
         }
@@ -794,24 +907,24 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
         int userSubmissionDuration = Integer.parseInt(serverProperties.getUserAssessmentSubmissionDuration());
 
         Instant allowedSubmitTime = assessmentStartTime
-                .plus(Duration.ofMinutes(expectedDuration + userSubmissionDuration));
+                .plus(Duration.ofMinutes((long) expectedDuration + userSubmissionDuration));
 
         Instant submissionTime = Instant.now();
 
         if (submissionTime.isBefore(allowedSubmitTime) || submissionTime.equals(allowedSubmitTime)) {
             List<String> desiredKeys = List.of(Constants.IDENTIFIER);
 
-            List<Object> hierarchySectionIds = hierarchySectionList.stream()
-                    .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
+            List<Object> hierarchySectionIds = submitData.hierarchySectionList.stream()
+                    .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
 
-            List<Object> submitSectionIds = sectionListFromSubmitRequest.stream()
-                    .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).collect(toList());
+            List<Object> submitSectionIds = submitData.sectionListFromSubmitRequest.stream()
+                    .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get)).toList();
 
             if (!new HashSet<>(hierarchySectionIds).containsAll(submitSectionIds)) {
                 return Constants.WRONG_SECTION_DETAILS;
             } else {
-                String areQuestionIdsSame = validateIfQuestionIdsAreSame(submitRequest,
-                        sectionListFromSubmitRequest, desiredKeys, userId, existingAssessmentData);
+                String areQuestionIdsSame = validateIfQuestionIdsAreSame(submitData.sectionListFromSubmitRequest,
+                        desiredKeys, existingAssessmentData);
                 if (!areQuestionIdsSame.isEmpty())
                     return areQuestionIdsSame;
             }
@@ -823,9 +936,8 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
     }
 
 
-    private String validateIfQuestionIdsAreSame(Map<String, Object> submitRequest,
-            List<Map<String, Object>> sectionListFromSubmitRequest, List<String> desiredKeys, String userId,
-            Map<String, Object> existingAssessmentData) throws Exception {
+    private String validateIfQuestionIdsAreSame(List<Map<String, Object>> sectionListFromSubmitRequest,
+            List<String> desiredKeys, Map<String, Object> existingAssessmentData) throws IOException {
         String questionSetFromAssessmentString = (String) existingAssessmentData
                 .get(Constants.ASSESSMENT_READ_RESPONSE_KEY);
         if (StringUtils.isNotBlank(questionSetFromAssessmentString)) {
@@ -837,7 +949,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                         .get(Constants.CHILDREN);
                 List<String> desiredKey = List.of(Constants.CHILD_NODES);
                 List<Object> questionList = sections.stream()
-                        .flatMap(x -> desiredKey.stream().filter(x::containsKey).map(x::get)).collect(toList());
+                        .flatMap(x -> desiredKey.stream().filter(x::containsKey).map(x::get)).toList();
                 List<Object> questionIdsFromAssessmentHierarchy = new ArrayList<>();
                 List<Map<String, Object>> questionsListFromSubmitRequest = new ArrayList<>();
                 for (Object question : questionList) {
@@ -852,7 +964,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                 }
                 List<Object> userQuestionIdsFromSubmitRequest = questionsListFromSubmitRequest.stream()
                         .flatMap(x -> desiredKeys.stream().filter(x::containsKey).map(x::get))
-                        .collect(Collectors.toList());
+                        .toList();
                 if (!new HashSet<>(questionIdsFromAssessmentHierarchy).containsAll(userQuestionIdsFromSubmitRequest)) {
                     return Constants.ASSESSMENT_SUBMIT_INVALID_QUESTION;
                 }
@@ -913,9 +1025,25 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
         return res;
     }
 
-    private void writeDataToDatabaseAndTriggerKafkaEvent(Map<String, Object> submitRequest, String userId,
-                                                         Map<String, Object> questionSetFromAssessment, Map<String, Object> result, String primaryCategory, String courseCategory,
-                                                         String userAuthToken, boolean shouldUpdateContentProgress, String contextCategory) throws ApplicationLogicError {
+    /**
+     * Who submitted what, and how the submission should be reported. Grouped into one object so
+     * {@link #writeDataToDatabaseAndTriggerKafkaEvent} stays within the parameter limit.
+     */
+    private record KafkaEventContext(Map<String, Object> submitRequest, String userId, String userAuthToken,
+                                     String primaryCategory, String courseCategory, String contextCategory,
+                                     boolean shouldUpdateContentProgress) {
+    }
+
+    private void writeDataToDatabaseAndTriggerKafkaEvent(KafkaEventContext eventContext,
+                                                         Map<String, Object> questionSetFromAssessment,
+                                                         Map<String, Object> result) throws ApplicationLogicError {
+        Map<String, Object> submitRequest = eventContext.submitRequest();
+        String userId = eventContext.userId();
+        String userAuthToken = eventContext.userAuthToken();
+        String primaryCategory = eventContext.primaryCategory();
+        String courseCategory = eventContext.courseCategory();
+        String contextCategory = eventContext.contextCategory();
+        boolean shouldUpdateContentProgress = eventContext.shouldUpdateContentProgress();
         try {
             if (questionSetFromAssessment.get(Constants.START_TIME) != null) {
                 Instant startTime = assessUtilServ.parseStartTimeToInstant(questionSetFromAssessment.get(Constants.START_TIME));
@@ -943,11 +1071,11 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                     kafkaResult.put(Constants.PRIMARY_CATEGORY, primaryCategory);
                     kafkaResult.put(Constants.TOTAL_SCORE, result.get(Constants.OVERALL_RESULT));
                     if ((primaryCategory.equalsIgnoreCase("Competency Assessment")
-                            && submitRequest.containsKey("competencies_v3")
-                            && submitRequest.get("competencies_v3") != null)) {
+                            && submitRequest.containsKey(Constants.COMPETENCIES_V3)
+                            && submitRequest.get(Constants.COMPETENCIES_V3) != null)) {
                         ObjectMapper objectMapper = new ObjectMapper(); //Updated for Json Import
                         List<Map<String, Object>> competencyList = objectMapper.readValue(
-                                (String) submitRequest.get("competencies_v3"),
+                                (String) submitRequest.get(Constants.COMPETENCIES_V3),
                                 new TypeReference<List<Map<String, Object>>>() {
                                 }
                         );
@@ -1011,7 +1139,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
         if (MapUtils.isEmpty(requestBody)) {
             return Constants.INVALID_REQUEST;
         }
-        List<String> missingAttribs = new ArrayList<String>();
+        List<String> missingAttribs = new ArrayList<>();
         if (!requestBody.containsKey(Constants.ASSESSMENT_ID_KEY)
                 || StringUtils.isBlank((String) requestBody.get(Constants.ASSESSMENT_ID_KEY))) {
             missingAttribs.add(Constants.ASSESSMENT_ID_KEY);
@@ -1039,7 +1167,7 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
                 return response;
             }
             Map<String, Object> res =assessUtilServ.fetchWheebox(userId);
-            if (res !=null && res.size() > 0) {
+            if (res !=null && !res.isEmpty()) {
                 response.getResult().put(RESPONSE,res);
             }
         } catch (Exception e) {
@@ -1166,8 +1294,8 @@ public class AssessmentServiceV4Impl implements AssessmentServiceV4 {
             return true;
         }
         Object shuffleValue = assessmentAllDetail.get(Constants.SHUFFLE);
-        if (shuffleValue instanceof Boolean) {
-            return (Boolean) shuffleValue;
+        if (shuffleValue instanceof Boolean shuffle) {
+            return shuffle;
         }
         return true;
     }
