@@ -11,12 +11,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
+import java.security.NoSuchAlgorithmException;
 import java.security.PublicKey;
+import java.security.spec.InvalidKeySpecException;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -32,17 +33,13 @@ public class KeyManager {
     String basePath = propertiesCache.getProperty(Constants.ACCESS_TOKEN_PUBLICKEY_BASEPATH);
     try (Stream<Path> walk = Files.walk(Paths.get(basePath))) {
       List<String> result =
-              walk.filter(Files::isRegularFile).map(x -> x.toString()).collect(Collectors.toList());
+              walk.filter(Files::isRegularFile).map(Object::toString).toList();
       result.forEach(
               file -> {
                 try {
                   StringBuilder contentBuilder = new StringBuilder();
                   Path path = Paths.get(file);
-                  Files.lines(path, StandardCharsets.UTF_8)
-                          .forEach(
-                                  x -> {
-                                    contentBuilder.append(x);
-                                  });
+                  Files.lines(path, StandardCharsets.UTF_8).forEach(contentBuilder::append);
                   KeyData keyData =
                           new KeyData(
                                   path.getFileName().toString(), loadPublicKey(contentBuilder.toString()));
@@ -60,15 +57,15 @@ public class KeyManager {
     return keyMap.get(keyId);
   }
 
-  public static PublicKey loadPublicKey(String key) throws Exception {
+  public static PublicKey loadPublicKey(String key) throws NoSuchAlgorithmException, InvalidKeySpecException {
     String publicKey = new String(key.getBytes(), StandardCharsets.UTF_8);
     publicKey = publicKey.replaceAll("(-+BEGIN PUBLIC KEY-+)", "");
     publicKey = publicKey.replaceAll("(-+END PUBLIC KEY-+)", "");
     publicKey = publicKey.replaceAll("[\\r\\n]+", "");
-    byte[] keyBytes = Base64Util.decode(publicKey.getBytes("UTF-8"), Base64Util.DEFAULT);
+    byte[] keyBytes = Base64Util.decode(publicKey.getBytes(StandardCharsets.UTF_8), Base64Util.DEFAULT);
 
-    X509EncodedKeySpec X509publicKey = new X509EncodedKeySpec(keyBytes);
+    X509EncodedKeySpec x509publicKey = new X509EncodedKeySpec(keyBytes);
     KeyFactory kf = KeyFactory.getInstance("RSA");
-    return kf.generatePublic(X509publicKey);
+    return kf.generatePublic(x509publicKey);
   }
 }
